--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pandas
 numpy
-tensorflow==2.7.0
+protobuf==3.20.1
+tensorflow==2.8.0
 matplotlib
 notebook
 sklearn
@@ -11,3 +12,4 @@ python_dotenv
 ipdb
 colorama
 mlflow
+google-cloud-storage
