--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 
-LOCAL_DATA_PATH=$HOME/.lewagon/mlops/data
+LOCAL_DATA_PATH=/home/skoooty/job-prepr-data/images/images
+LOCAL_DATA_PATH_HD=/home/skoooty/job-prepr-data/images_hd
 LOCAL_REGISTRY_PATH=$HOME/.lewagon/mlops/training_outputs
 
 DATASET_SIZE=10k
