--- a/Dockerfile_face_api
+++ b/Dockerfile_face_api
@@ -2,4 +2,4 @@ FROM tensorflow/tensorflow
 COPY job_prepr_model /job_prepr_model
 COPY requirements.txt /requirements.txt
 RUN pip install -r requirements.txt
-CMD uvicorn job_prepr_model.api.fast:app --host 0.0.0.0 --port $PORT
+CMD uvicorn job_prepr_model.api.face_api:app --host 0.0.0.0 --port $PORT
